--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,6 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <TextBlock x:Name="txtBlock" HorizontalAlignment="Left" Margin="87,81,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+        <Button Content="Broadcast my self" HorizontalAlignment="Left" Margin="263,28,0,0" VerticalAlignment="Top" Width="106" Click="Button_Click"/>
+        <ListBox x:Name="lstUsers" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100" Margin="386,25,0,0"/>
+        <TextBox x:Name="txtMessage" HorizontalAlignment="Left" Height="23" Margin="120,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtMyUser" HorizontalAlignment="Left" Height="23" Margin="57,150,0,0" TextWrapping="Wrap" Text="MyUserName" VerticalAlignment="Top" Width="120"/>
+        <ListBox x:Name="lstMessages" HorizontalAlignment="Left" Height="123" Margin="226,173,0,0" VerticalAlignment="Top" Width="260"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="71,61,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+
     </Grid>
 </Window>
