--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,14 +2,27 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Local IM" Height="350" Width="525">
-    <Grid>
-        <TextBlock x:Name="txtBlock" HorizontalAlignment="Left" Margin="87,81,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <Button Content="Broadcast my self" HorizontalAlignment="Left" Margin="263,28,0,0" VerticalAlignment="Top" Width="106" Click="Button_Click"/>
-        <ListBox x:Name="lstUsers" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100" Margin="386,25,0,0"/>
-        <TextBox x:Name="txtMessage" HorizontalAlignment="Left" Height="23" Margin="120,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtMyUser" HorizontalAlignment="Left" Height="23" Margin="57,150,0,0" TextWrapping="Wrap" Text="MyUserName" VerticalAlignment="Top" Width="120"/>
-        <ListBox x:Name="lstMessages" HorizontalAlignment="Left" Height="123" Margin="226,173,0,0" VerticalAlignment="Top" Width="260"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="71,61,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-
+    <Grid>        
+        <ListBox ItemsSource="{Binding Contacts}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal" Height="30">
+                        <TextBlock Text="{Binding Username}" ToolTip="{Binding LastActionText}"/>
+                        <TextBlock Text="{Binding MessagesCount}" ToolTip="Total Messages" Margin="10,0"/>
+                        <TextBlock Text="{Binding UnreadMessagesCount}" ToolTip="Unread Messages" FontWeight="Bold" Margin="10,0">
+                            <TextBlock.Style>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding Path=UnreadMessagesCount}" Value="0">
+                                            <Setter Property="Visibility" Value="Hidden"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </TextBlock.Style>
+                        </TextBlock>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </Window>
