--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,28 +1,72 @@
-﻿<Window x:Class="LocalIM.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Model="clr-namespace:LocalIM.Model" x:Class="LocalIM.MainWindow"
         Title="Local IM" Height="350" Width="525">
-    <Grid>        
-        <ListBox ItemsSource="{Binding Contacts}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal" Height="30">
-                        <TextBlock Text="{Binding Username}" ToolTip="{Binding LastActionText}"/>
-                        <TextBlock Text="{Binding MessagesCount}" ToolTip="Total Messages" Margin="10,0"/>
-                        <TextBlock Text="{Binding UnreadMessagesCount}" ToolTip="Unread Messages" FontWeight="Bold" Margin="10,0">
-                            <TextBlock.Style>
-                                <Style TargetType="{x:Type TextBlock}">
-                                    <Style.Triggers>
-                                        <DataTrigger Binding="{Binding Path=UnreadMessagesCount}" Value="0">
-                                            <Setter Property="Visibility" Value="Hidden"/>
-                                        </DataTrigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </TextBlock.Style>
-                        </TextBlock>
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+    <Window.Resources>
+        
+    </Window.Resources>
+    <Grid>
+        <Grid.Effect>
+            <DropShadowEffect ShadowDepth="2"/>
+        </Grid.Effect>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="White" Offset="1"/>
+                <GradientStop Color="#FF8C8C8C"/>
+                <GradientStop Color="#FFE9E9E9"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <DockPanel>
+            <StackPanel Orientation="Vertical" DockPanel.Dock="Right" Margin="5,5,5,5">
+                <Button Content="Settings"/>
+            </StackPanel>
+            <DockPanel DockPanel.Dock="Left">
+                <TextBlock Text="Online Contacts" Margin="5,5,5,5" DockPanel.Dock="Top"/>
+                <ListBox ItemsSource="{Binding Contacts}" DockPanel.Dock="Bottom" Background="Transparent">
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <DockPanel Height="30">
+                                <!--<TextBlock Text="{Binding MessagesCount}" ToolTip="Total Messages" Margin="10,0" VerticalAlignment="Center" DockPanel.Dock="Right"/>-->
+                                <TextBlock Text="{Binding UnreadMessagesCount}" ToolTip="Unread Messages" FontWeight="Bold" Margin="10,0" VerticalAlignment="Center" DockPanel.Dock="Right">
+                                    <TextBlock.Style>
+                                        <Style TargetType="{x:Type TextBlock}">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding UnreadMessagesCount}" Value="0">
+                                                    <Setter Property="Visibility" Value="Hidden"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                                <TextBlock Text="{Binding Username}" ToolTip="{Binding LastActionText}" VerticalAlignment="Center" DockPanel.Dock="Left">
+                                <TextBlock.Style>
+                                        <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource BasicTextBlock}">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding IsIdle}" Value="false">
+                                                    <Setter Property="Foreground" Value="Green"/>
+                                                </DataTrigger>
+                                                <DataTrigger Binding="{Binding IsIdle}" Value="true">
+                                                    <Setter Property="Foreground" Value="Yellow"/>
+                                                </DataTrigger>
+                                                <DataTrigger Binding="{Binding IsInActive}" Value="True">
+                                                    <Setter Property="Foreground" Value="Red"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                            </DockPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </DockPanel>
+        </DockPanel>
+
     </Grid>
 </Window>
