--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Model="clr-namespace:LocalIM.Model" x:Class="LocalIM.MainWindow"
-        Title="Local IM" Height="350" Width="525">
+        MinHeight="200" MinWidth="300"
+        Title="Local IM" Height="300" Width="300" WindowStartupLocation="CenterScreen" ResizeMode="CanResizeWithGrip">
     <Window.Resources>
         
     </Window.Resources>
@@ -18,11 +19,14 @@
             </LinearGradientBrush>
         </Grid.Background>
         <DockPanel>
+            <StatusBar DockPanel.Dock="Bottom">
+                <TextBlock Text="{Binding StatusText}" Margin="5,5,5,5"/>
+            </StatusBar>
             <StackPanel Orientation="Vertical" DockPanel.Dock="Right" Margin="5,5,5,5">
                 <Button Content="Settings"/>
-            </StackPanel>
+            </StackPanel>            
             <DockPanel DockPanel.Dock="Left">
-                <TextBlock Text="Online Contacts" Margin="5,5,5,5" DockPanel.Dock="Top"/>
+                <TextBlock Text="Online Contacts" Margin="5,5,5,5" DockPanel.Dock="Top"/>                
                 <ListBox ItemsSource="{Binding Contacts}" DockPanel.Dock="Bottom" Background="Transparent">
                     <ListBox.ItemContainerStyle>
                         <Style TargetType="ListBoxItem">
