--- a/Chat/ChatWindow.xaml
+++ b/Chat/ChatWindow.xaml
@@ -1,10 +1,13 @@
 ﻿<Window x:Class="LocalIM.Chat.ChatWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowInTaskbar="false"
-        
-        Title="ChatWindow" Height="300" Width="300" WindowStyle="None" WindowStartupLocation="CenterScreen" ResizeMode="CanResizeWithGrip">
-    <DockPanel>
-         <TextBlock Text="Chat Window" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
+        MinHeight="150" MinWidth="150" AllowsTransparency="True"
+        Title="ChatWindow" Height="300" Width="300" WindowStyle="None" ResizeMode="CanResizeWithGrip">
+    <DockPanel>        
+        <DockPanel DockPanel.Dock="Top">
+            <Button Content="X" DockPanel.Dock="Right" Click="CloseWindow"/>
+            <TextBlock Text="Chat Window" HorizontalAlignment="Center" DockPanel.Dock="Left"/>            
+        </DockPanel>         
          <TextBlock Text="{Binding Username}" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
          <ListBox ItemsSource="{Binding Messages}"></ListBox>
     </DockPanel>
