--- a/Chat/ChatWindow.xaml
+++ b/Chat/ChatWindow.xaml
@@ -3,12 +3,56 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowInTaskbar="false"
         MinHeight="150" MinWidth="150" AllowsTransparency="True"
         Title="ChatWindow" Height="300" Width="300" WindowStyle="None" ResizeMode="CanResizeWithGrip">
-    <DockPanel>        
+    <DockPanel>
         <DockPanel DockPanel.Dock="Top">
             <Button Content="X" DockPanel.Dock="Right" Click="CloseWindow"/>
-            <TextBlock Text="Chat Window" HorizontalAlignment="Center" DockPanel.Dock="Left"/>            
-        </DockPanel>         
-         <TextBlock Text="{Binding Username}" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
-         <ListBox ItemsSource="{Binding Messages}"></ListBox>
+            <TextBlock Text="Chat Window" HorizontalAlignment="Center" DockPanel.Dock="Left"/>
+        </DockPanel>
+        <TextBlock Text="{Binding Username}" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
+        <DockPanel DockPanel.Dock="Bottom">            
+            <Button Content="Send" DockPanel.Dock="Right" Command="{Binding SendNewMessage}"/>
+            <TextBox DockPanel.Dock="Left" Text="{Binding NewMessageText,Mode=TwoWay}"/>
+        </DockPanel>
+        <ListBox ItemsSource="{Binding Messages}">
+            <ListBox.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="#FFD1EEA6" Offset="1"/>
+                    <GradientStop Color="#FF2C3323"/>
+                    <GradientStop Color="#FF64724F"/>
+                    <GradientStop Color="#FFB6CF90" Offset="0.672"/>
+                </LinearGradientBrush>
+            </ListBox.Background>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                </Style>
+            </ListBox.ItemContainerStyle>
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Border CornerRadius="5">
+                        <Border.Background>
+                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                <GradientStop Color="#FFB09595" Offset="0"/>
+                                <GradientStop Color="#FFEC9E9E" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Border.Background>
+                        <DockPanel>
+                            <TextBlock Text="{Binding Text}">
+                            <TextBlock.Style>
+                                <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource BasicTextBlock}">
+                                    <Style.Triggers>
+                                            <DataTrigger Binding="{Binding IsRead}" Value="false">
+                                            <Setter Property="HorizontalAlignment" Value="Right"/>
+                                        </DataTrigger>                                        
+                                    </Style.Triggers>
+                                </Style>
+                            </TextBlock.Style>
+                            </TextBlock>
+                        </DockPanel>
+                    </Border>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </DockPanel>
 </Window>
